--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,9 @@ _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
 .name-large {
     font-size: 8em;
 }
+.selected {
+    background-color: rgba(255, 255, 255, 0.3);
+}
 
 
 
